--- a/COMP003B.LectureActivity6/Views/Shared/_Layout.cshtml
+++ b/COMP003B.LectureActivity6/Views/Shared/_Layout.cshtml
@@ -28,6 +28,14 @@
                     </ul>
                 </div>
             </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" asp-controller="Students" asp-action="Index">Students</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Courses" asp-action="Index">Courses</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Enrollments" asp-action="Index">Enrollments</a></li>
+                </ul>
+            </div>
+
         </nav>
     </header>
     <div class="container">
